--- a/Lab02/index.html
+++ b/Lab02/index.html
@@ -7,12 +7,40 @@
             border: none;
             color: white;
             padding: 15px 32px;
+            border: black 2px solid;
+            border-radius: 10px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
+        }
+          .styled table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+ 
+        .styled th, .styled td {
+            border: 1px solid #ccc;
+            padding: 8px;
+        }
+ 
+        .styled th {
+            background: #0b3c5d;
+            color: white;
+        }
+ 
+        .styled a {
+            color: #0b3c5d;
+            font-weight: bold;
+        }
+        .styled img {
+            display: block;
+            margin: 20px auto;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+            max-width: 100%;
         }
     </style>
         
@@ -22,7 +50,7 @@
 </head>
 <body>
     
-    <button class="btn"> ver antes / despues</button>
+    <button class="btn" onclick="activarEstilos()">Ver antes / después</button>
 
     <h1>Lab 02</h1>
     <p>Este es el primer laboratorio de la asignatura.</p>
@@ -86,6 +114,11 @@
 
 
     <p>Para más información, visita el sitio web oficial.</p>
+     <script>
+        function activarEstilos() {
+            document.body.classList.toggle('styled');
+        }
+    </script>
 </body>
 
 </html>
